@@ -1,9 +1,13 @@
 2012-03-27  Juan J. Merelo Guervós  <jjmerelo@gmail.com>
 
+	* script/simple-EA.pl: Used the wrong file for this, so I changed
+	the good one, this one. Changed a bit docs, too.
+
 	* lib/Algorithm/Evolutionary/Simple.pm
 	(get_pool_binary_tournament): Added binary tournament, a less
 	greedy way of selection which seems to work a bit better and is a
 	bit faster.
+	
 
 2011-12-06  Juan J. Merelo Guervós  <jjmerelo@gmail.com>
 
